2.0.0 - Java 17 + multiple changes and fixes.
Will probably break existing Spincast applications. Use to start new ones only.