@@ -45,6 +45,7 @@ import com.google.inject.Inject;
 public class JsonObjectsTest extends GsonTestBase {
 
     public static enum TestEnum {
+
         ONE("first value"),
         SECOND("second value");
 
@@ -209,12 +210,12 @@ public class JsonObjectsTest extends GsonTestBase {
         JsonObject jsonObj = getJsonManager().fromString(str);
         assertNotNull(jsonObj);
         assertEquals(true, jsonObj.getBoolean("anotherBoolean"));
-        assertEquals(new Integer(44444), jsonObj.getInteger("anotherInt"));
+        assertEquals(Integer.valueOf(44444), jsonObj.getInteger("anotherInt"));
 
         JsonObject jsonObj2 = jsonObj.getJsonObject("innerObj");
         assertNotNull(jsonObj2);
         assertEquals(true, jsonObj2.getBoolean("someBoolean"));
-        assertEquals(new Integer(123), jsonObj2.getInteger("someInt"));
+        assertEquals(Integer.valueOf(123), jsonObj2.getInteger("someInt"));
 
         String jsonString = jsonObj.toJsonString();
         assertEquals(str.length(), jsonString.length());
@@ -455,11 +456,11 @@ public class JsonObjectsTest extends GsonTestBase {
 
         Double result = jsonObj.getDouble("key5");
         assertNotNull(result);
-        assertEquals(new Double(123), result);
+        assertEquals(Double.valueOf(123), result);
 
         result = jsonObj.getDouble("key6");
         assertNotNull(result);
-        assertEquals(new Double(123), result);
+        assertEquals(Double.valueOf(123), result);
 
         result = jsonObj.getDouble("key7");
         assertNotNull(result);
@@ -467,8 +468,8 @@ public class JsonObjectsTest extends GsonTestBase {
         result = jsonObj.getDouble("nope");
         assertNull(result);
 
-        result = jsonObj.getDouble("nope", new Double("123"));
-        assertEquals(new Double("123"), result);
+        result = jsonObj.getDouble("nope", Double.valueOf("123"));
+        assertEquals(Double.valueOf("123"), result);
 
         result = jsonObj.getDouble("nope", null);
         assertEquals(null, result);
@@ -521,11 +522,11 @@ public class JsonObjectsTest extends GsonTestBase {
 
         Integer result = jsonObj.getInteger("key5");
         assertNotNull(result);
-        assertEquals(new Integer(123), result);
+        assertEquals(Integer.valueOf(123), result);
 
         result = jsonObj.getInteger("key6");
         assertNotNull(result);
-        assertEquals(new Integer(123), result);
+        assertEquals(Integer.valueOf(123), result);
 
         try {
             jsonObj.getInteger("key7");
@@ -536,8 +537,8 @@ public class JsonObjectsTest extends GsonTestBase {
         result = jsonObj.getInteger("nope");
         assertNull(result);
 
-        result = jsonObj.getInteger("nope", new Integer("123"));
-        assertEquals(new Integer("123"), result);
+        result = jsonObj.getInteger("nope", Integer.valueOf("123"));
+        assertEquals(Integer.valueOf("123"), result);
 
         result = jsonObj.getInteger("nope", null);
         assertEquals(null, result);
@@ -590,11 +591,11 @@ public class JsonObjectsTest extends GsonTestBase {
 
         Long result = jsonObj.getLong("key5");
         assertNotNull(result);
-        assertEquals(new Long(123), result);
+        assertEquals(Long.valueOf(123), result);
 
         result = jsonObj.getLong("key6");
         assertNotNull(result);
-        assertEquals(new Long(123), result);
+        assertEquals(Long.valueOf(123), result);
 
         try {
             jsonObj.getLong("key7");
@@ -605,8 +606,8 @@ public class JsonObjectsTest extends GsonTestBase {
         result = jsonObj.getLong("nope");
         assertNull(result);
 
-        result = jsonObj.getLong("nope", new Long("123"));
-        assertEquals(new Long("123"), result);
+        result = jsonObj.getLong("nope", Long.valueOf("123"));
+        assertEquals(Long.valueOf("123"), result);
 
         result = jsonObj.getLong("nope", null);
         assertEquals(null, result);
@@ -658,11 +659,11 @@ public class JsonObjectsTest extends GsonTestBase {
 
         Float result = jsonObj.getFloat("key5");
         assertNotNull(result);
-        assertEquals(new Float(123), result);
+        assertEquals(Float.valueOf(123), result);
 
         result = jsonObj.getFloat("key6");
         assertNotNull(result);
-        assertEquals(new Float(123), result);
+        assertEquals(Float.valueOf(123), result);
 
         result = jsonObj.getFloat("key7");
         assertNotNull(result);
@@ -671,8 +672,8 @@ public class JsonObjectsTest extends GsonTestBase {
         result = jsonObj.getFloat("nope");
         assertNull(result);
 
-        result = jsonObj.getFloat("nope", new Float("123"));
-        assertEquals(new Float("123"), result);
+        result = jsonObj.getFloat("nope", Float.valueOf("123"));
+        assertEquals(Float.valueOf("123"), result);
 
         result = jsonObj.getFloat("nope", null);
         assertEquals(null, result);
@@ -1676,7 +1677,7 @@ public class JsonObjectsTest extends GsonTestBase {
 
         Integer arrayFirst = jsonObj.getArrayFirstInteger("arr");
         assertNotNull(arrayFirst);
-        assertEquals(new Integer(123), arrayFirst);
+        assertEquals(Integer.valueOf(123), arrayFirst);
     }
 
     @Test
@@ -1691,7 +1692,7 @@ public class JsonObjectsTest extends GsonTestBase {
         array.add(array2);
 
         Integer arrayFirst = array.getArrayFirstInteger(1);
-        assertEquals(new Integer(123), arrayFirst);
+        assertEquals(Integer.valueOf(123), arrayFirst);
     }
 
     @Test
@@ -1706,7 +1707,7 @@ public class JsonObjectsTest extends GsonTestBase {
 
         Long arrayFirst = jsonObj.getArrayFirstLong("arr");
         assertNotNull(arrayFirst);
-        assertEquals(new Long(123), arrayFirst);
+        assertEquals(Long.valueOf(123), arrayFirst);
     }
 
     @Test
@@ -1721,7 +1722,7 @@ public class JsonObjectsTest extends GsonTestBase {
         array.add(array2);
 
         Long arrayFirst = array.getArrayFirstLong(1);
-        assertEquals(new Long(123), arrayFirst);
+        assertEquals(Long.valueOf(123), arrayFirst);
     }
 
     @Test
@@ -1736,7 +1737,7 @@ public class JsonObjectsTest extends GsonTestBase {
 
         Float arrayFirst = jsonObj.getArrayFirstFloat("arr");
         assertNotNull(arrayFirst);
-        assertEquals(new Float(123), arrayFirst);
+        assertEquals(Float.valueOf(123), arrayFirst);
     }
 
     @Test
@@ -1751,7 +1752,7 @@ public class JsonObjectsTest extends GsonTestBase {
         array.add(array2);
 
         Float arrayFirst = array.getArrayFirstFloat(1);
-        assertEquals(new Float(123), arrayFirst);
+        assertEquals(Float.valueOf(123), arrayFirst);
     }
 
     @Test
@@ -1766,7 +1767,7 @@ public class JsonObjectsTest extends GsonTestBase {
 
         Double arrayFirst = jsonObj.getArrayFirstDouble("arr");
         assertNotNull(arrayFirst);
-        assertEquals(new Double(123), arrayFirst);
+        assertEquals(Double.valueOf(123), arrayFirst);
     }
 
     @Test
@@ -1781,7 +1782,7 @@ public class JsonObjectsTest extends GsonTestBase {
         array.add(array2);
 
         Double arrayFirst = array.getArrayFirstDouble(1);
-        assertEquals(new Double(123), arrayFirst);
+        assertEquals(Double.valueOf(123), arrayFirst);
     }
 
     @Test
