@@ -403,7 +403,7 @@ public class JsonTransformersTest extends GsonTestBase {
         assertEquals("   c   ", arrayResult.getObject(2));
         assertEquals("      ", arrayResult.getObject(3));
         assertEquals(null, arrayResult.getObject(4));
-        assertEquals(new Integer(123), arrayResult.getObject(5));
+        assertEquals(Integer.valueOf(123), arrayResult.getObject(5));
 
         JsonObject objResult = arrayResult.getJsonObject(6);
         assertNotNull(objResult);
@@ -412,7 +412,7 @@ public class JsonTransformersTest extends GsonTestBase {
         assertEquals("   c   ", objResult.getObject("key3"));
         assertEquals("      ", objResult.getObject("key4"));
         assertEquals(null, objResult.getObject("key5"));
-        assertEquals(new Integer(123), objResult.getObject("key6"));
+        assertEquals(Integer.valueOf(123), objResult.getObject("key6"));
 
         JsonArray array2Result = objResult.getJsonArray("inner");
         assertNotNull(array2Result);
@@ -434,7 +434,7 @@ public class JsonTransformersTest extends GsonTestBase {
         assertEquals("c", arrayResult.getObject(2));
         assertEquals("      ", arrayResult.getObject(3));
         assertEquals(null, arrayResult.getObject(4));
-        assertEquals(new Integer(123), arrayResult.getObject(5));
+        assertEquals(Integer.valueOf(123), arrayResult.getObject(5));
 
         objResult = arrayResult.getJsonObject(6);
         assertNotNull(objResult);
@@ -443,7 +443,7 @@ public class JsonTransformersTest extends GsonTestBase {
         assertEquals("c", objResult.getObject("key3"));
         assertEquals("      ", objResult.getObject("key4"));
         assertEquals(null, objResult.getObject("key5"));
-        assertEquals(new Integer(123), objResult.getObject("key6"));
+        assertEquals(Integer.valueOf(123), objResult.getObject("key6"));
 
         array2Result = objResult.getJsonArray("inner");
         assertNotNull(array2Result);
@@ -796,7 +796,7 @@ public class JsonTransformersTest extends GsonTestBase {
         assertEquals("   c   ", arrayResult.getObject(2));
         assertEquals("      ", arrayResult.getObject(3));
         assertEquals(null, arrayResult.getObject(4));
-        assertEquals(new Integer(123), arrayResult.getObject(5));
+        assertEquals(Integer.valueOf(123), arrayResult.getObject(5));
 
         JsonObject objResult = arrayResult.getJsonObject(6);
         assertNotNull(objResult);
@@ -805,7 +805,7 @@ public class JsonTransformersTest extends GsonTestBase {
         assertEquals("   c   ", objResult.getObject("key3"));
         assertEquals("      ", objResult.getObject("key4"));
         assertEquals(null, objResult.getObject("key5"));
-        assertEquals(new Integer(123), objResult.getObject("key6"));
+        assertEquals(Integer.valueOf(123), objResult.getObject("key6"));
 
         JsonArray array2Result = objResult.getJsonArray("inner");
         assertNotNull(array2Result);
@@ -829,7 +829,7 @@ public class JsonTransformersTest extends GsonTestBase {
         assertEquals("***c***", arrayResult.getObject(2));
         assertEquals("      ", arrayResult.getObject(3));
         assertEquals(null, arrayResult.getObject(4));
-        assertEquals(new Integer(123), arrayResult.getObject(5));
+        assertEquals(Integer.valueOf(123), arrayResult.getObject(5));
 
         objResult = arrayResult.getJsonObject(6);
         assertNotNull(objResult);
@@ -838,7 +838,7 @@ public class JsonTransformersTest extends GsonTestBase {
         assertEquals("***c***", objResult.getObject("key3"));
         assertEquals("      ", objResult.getObject("key4"));
         assertEquals(null, objResult.getObject("key5"));
-        assertEquals(new Integer(123), objResult.getObject("key6"));
+        assertEquals(Integer.valueOf(123), objResult.getObject("key6"));
 
         array2Result = objResult.getJsonArray("inner");
         assertNotNull(array2Result);
